# aichallenge-2025

./: .gitignore  README.md  depends.repos  packages.txt
aichallenge/: build_autoware.bash  record_rosbag.bash  run_evaluation.bash
aichallenge/workspace/: .gitignore
aichallenge/workspace/src/aichallenge_submit/aichallenge_submit_launch/config/: ublox_f9r.param.yaml  ublox_f9r2.param.yaml
aichallenge/workspace/src/aichallenge_submit/aichallenge_submit_launch/launch/: reference.launch.xml
aichallenge/workspace/src/aichallenge_submit/gyro_odometer/src/: gyro_odometer_core.cpp
aichallenge/workspace/src/aichallenge_submit/vlm_planner/: README.md  prompt.py  pyproject.toml  run_vlm_planner.bash  run_vlm_plannner.bash  setup_vlm_plannner.bash  vlm_planner.py  vlm_planner_node.py
aichallenge/workspace/src/aichallenge_submit/vlm_planner/experiment/01_bev/: bev_transform.py
aichallenge/workspace/src/aichallenge_submit/vlm_planner/experiment/02_gemeni_trajectory_planning/: trajectory_planning.py
aichallenge/workspace/src/aichallenge_submit/vlm_planner/experiment/03_heron_nvila/: pyproject.toml  trajectory_planning.py
aichallenge/workspace/src/aichallenge_submit/vlm_trajectory_selector/: .env.sample  README.md  pyproject.toml  run_vlm_selector.bash  setup_vlm_selector.bash  trajectory_selector.py  vlm_selector.py
aichallenge/workspace/src/aichallenge_submit/yabloc/: setup.bash
remote/: connect_ssh.bash  zenoh-user.json5
vehicle/: Makefile  Readme.md  docker-compose.yml  record_rosbag.bash  setup_check.sh  zenoh.json5
(+18 files in other folders)
