[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vlm-planner"
version = "0.1.0"
description = "VLM-based trajectory planner for autonomous driving"
readme = "README.md"
requires-python = "~=3.10"
dependencies = [
    "numpy<2",
    "Pillow",
    "opencv-python-headless",
    "google-generativeai>=0.8.3",
    "python-dotenv>=1.2.1",
    "matplotlib>=3.10.7",
]

[tool.setuptools]
py-modules = [
    "vlm_planner_node",
]
